--- a/repositories/helm/kustomization.yaml
+++ b/repositories/helm/kustomization.yaml
@@ -10,6 +10,7 @@ resources:
   - jetstack.yaml
   - kustomization.yaml
   - prometheus-community.yaml
+  - rook-ceph.yaml
   - spegel.yaml
   - truecharts.yaml
 # more goes here!
