--- a/clusters/main/kubernetes/apps/kustomization.yaml
+++ b/clusters/main/kubernetes/apps/kustomization.yaml
@@ -1,6 +1,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - cloudflared/ks.yaml
-  # - kubernetes-dashboard/ks.yaml
-  - ext-cow/ks.yaml
+  - kubernetes-dashboard/ks.yaml
+  # - cloudflared/ks.yaml
+  # - ext-cow/ks.yaml
