removed longhorn and dashboard

--- a/clusters/main/talos/talconfig.yaml
+++ b/clusters/main/talos/talconfig.yaml
@@ -81,33 +81,33 @@ nodes:
               gateway: ${GATEWAY}
           vip:
             ip: ${VIP}
-    # - hostname: k8s-worker-1
-    #   ipAddress: 192.168.2.207
-    #   nameservers:
-    #     - 1.1.1.1
-    #     - 8.8.8.8
-    #   installDiskSelector:
-    #     # size: <= 600GB
-    #     model: Fan*
-    # - hostname: k8s-worker-2
-    #   ipAddress: 192.168.2.206
-    #   nameservers:
-    #     - 1.1.1.1
-    #     - 8.8.8.8
-    #   installDiskSelector:
-    #     model: KIN*
-    # - hostname: k8s-worker-3
-    #   ipAddress: 192.168.2.205
-    #   nameservers:
-    #     - 1.1.1.1
-    #     - 8.8.8.8
-    #   installDiskSelector:
-    #     size: <= 200GB
-    #   schematic:
-    #       customization:
-    #           systemExtensions:
-    #               officialExtensions:
-    #                   - siderolabs/qemu-guest-agent
+    - hostname: k8s-worker-1
+      ipAddress: 192.168.2.207
+      nameservers:
+        - 1.1.1.1
+        - 8.8.8.8
+      installDiskSelector:
+        # size: <= 600GB
+        model: Fan*
+    - hostname: k8s-worker-2
+      ipAddress: 192.168.2.206
+      nameservers:
+        - 1.1.1.1
+        - 8.8.8.8
+      installDiskSelector:
+        model: KIN*
+    - hostname: k8s-worker-3
+      ipAddress: 192.168.2.205
+      nameservers:
+        - 1.1.1.1
+        - 8.8.8.8
+      installDiskSelector:
+        size: <= 200GB
+      schematic:
+          customization:
+              systemExtensions:
+                  officialExtensions:
+                      - siderolabs/qemu-guest-agent
 controlPlane:
     patches:
         - '@./patches/controlplane.yaml'
