--- a/clusters/main/kubernetes/system/kustomization.yaml
+++ b/clusters/main/kubernetes/system/kustomization.yaml
@@ -5,7 +5,7 @@ resources:
   - cloudnative-pg/ks.yaml
   - kube-prometheus-stack/ks.yaml
   - kubernetes-reflector/ks.yaml
-  - longhorn/ks.yaml
+  # - longhorn/ks.yaml
   - metallb/ks.yaml
   - openebs/ks.yaml
   - snapshot-controller/ks.yaml
