--- a/myvalues.yaml
+++ b/myvalues.yaml
@@ -1,33 +1,3 @@
----
-# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/helm.toolkit.fluxcd.io/helmrelease_v2.json
-apiVersion: helm.toolkit.fluxcd.io/v2
-kind: HelmRelease
-metadata:
-  name: nginx-internal
-  namespace: nginx-internal
-spec:
-  interval: 15m
-  chart:
-    spec:
-      chart: ingress-nginx
-      version: 4.12.4
-      sourceRef:
-        kind: HelmRepository
-        name: home-ops-mirror
-        namespace: flux-system
-      interval: 15m
-  timeout: 20m
-  maxHistory: 3
-  install:
-    createNamespace: true
-    remediation:
-      retries: 3
-  upgrade:
-    cleanupOnFail: true
-    remediation:
-      retries: 3
-  uninstall:
-    keepHistory: false
   values:
     controller:
       replicaCount: 1
@@ -35,15 +5,15 @@ spec:
         externalTrafficPolicy: Local
         annotations:
           # TODO: Maybe play with this
-          # internal-dns.alpha.kubernetes.io/hostname: internal.${DOMAIN_0}
+          # internal-dns.alpha.kubernetes.io/hostname: external.${DOMAIN_0}
           metallb.io/ip-allocated-from-pool: main
-          metallb.io/loadBalancerIPs: ${NGINX_INTERNAL_IP}
+          metallb.io/loadBalancerIPs: ${NGINX_EXTERNAL_IP}
       ingressClassByName: true
-      watchIngressWithoutClass: true
+      watchIngressWithoutClass: false
       ingressClassResource:
-        name: internal
-        default: true
-        controllerValue: k8s.io/internal
+        name: external
+        default: false
+        controllerValue: k8s.io/external
       config:
         allow-snippet-annotations: true
         annotations-risk-level: Critical
@@ -72,7 +42,7 @@ spec:
         #     any: true
       extraArgs:
         default-ssl-certificate: "clusterissuer/certificate-issuer-domain-0-wildcard"
-        publish-status-address: ${NGINX_INTERNAL_IP}
+        publish-status-address: ${NGINX_EXTERNAL_IP}
       terminationGracePeriodSeconds: 120
       publishService:
         enabled: false
