--- a/clusters/main/kubernetes/apps/immich/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/immich/app/helm-release.yaml
@@ -32,9 +32,9 @@ spec:
     global:
       stopAll: false
     TZ: America/Chicago
-    resources:
-      requests:
-        cpu: 10m    
+    # resources:
+    #   requests:
+    #     cpu: 10m    
     credentials:
       s3:
         type: s3
