--- a/clusters/main/kubernetes/apps/rustdesk/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/rustdesk/app/helm-release.yaml
@@ -44,13 +44,13 @@ spec:
     portal:
       open:
         enabled: false
-    # workload:
-    #   main:
-    #     podSpec:
-    #       containers:
-    #         main:
-    #           env:
-    #             RELAY: "wireguard.${DOMAIN_1}:21117"
+    workload:
+      main:
+        podSpec:
+          containers:
+            main:
+              env:
+                RELAY: "wireguard.${DOMAIN_1}:21117"
     service:
       main:
         loadBalancerIP: ${RUSTDESK_IP}
