--- a/clusters/main/kubernetes/apps/vaultwarden/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/vaultwarden/app/helm-release.yaml
@@ -57,7 +57,7 @@ spec:
         allowSignups: true
         verifySignup: false
         requireEmail: false
-        allowInvitation: false
+        allowInvitation: true
         showPasswordHint: false
         enableWebVault: true
         admin:
