--- a/clusters/main/kubernetes/apps/vaultwarden/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/vaultwarden/app/helm-release.yaml
@@ -46,7 +46,7 @@ spec:
     ingress:
       main:
         enabled: true
-        ingressClassName: internal
+        ingressClassName: external
         hosts:
           - host: vault.${DOMAIN_1}
         integrations:
