--- a/clusters/main/kubernetes/apps/kustomization.yaml
+++ b/clusters/main/kubernetes/apps/kustomization.yaml
@@ -7,7 +7,7 @@ resources:
   - hass/ks.yaml
   - jellyfin/ks.yaml
   - immich/ks.yaml
-  # - vaultwarden/ks.yaml
+  - vaultwarden/ks.yaml
   - xepg/ks.yaml
   - xteve/ks.yaml
   - nextcloud/ks.yaml
