--- a/clusters/main/kubernetes/apps/vaultwarden/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/vaultwarden/app/helm-release.yaml
@@ -54,7 +54,7 @@ spec:
             enabled: true
             certificateIssuer: domain-0-le-prod
     vaultwarden:
-        allowSignups: true
+        allowSignups: false
         verifySignup: false
         requireEmail: false
         allowInvitation: true
