--- a/clusters/main/kubernetes/apps/rustdesk/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/rustdesk/app/helm-release.yaml
@@ -59,6 +59,12 @@ spec:
         integrations:
           metallb:
             enabled: true
+        ports:
+          main:
+            enabled: true
+            port: 21117
+            protocol: tcp
+            targetPort: 21117            
     persistence:
       data:
         storageClass: ceph-filesystem
