--- a/clusters/main/kubernetes/apps/rdgen/app/namespace.yaml
+++ b/clusters/main/kubernetes/apps/rdgen/app/namespace.yaml
@@ -2,3 +2,5 @@ apiVersion: v1
 kind: Namespace
 metadata:
     name: rdgen
+    labels:
+        pod-security.kubernetes.io/enforce: privileged      
