--- a/clusters/main/kubernetes/apps/kustomization.yaml
+++ b/clusters/main/kubernetes/apps/kustomization.yaml
@@ -3,7 +3,7 @@ kind: Kustomization
 resources:
   # - kubernetes-dashboard/ks.yaml
   - cloudflared/ks.yaml
-  - ext-cow/ks.yaml
+  # - ext-cow/ks.yaml
   - hass/ks.yaml
   - jellyfin/ks.yaml
   - immich/ks.yaml
