--- a/clusters/main/kubernetes/core/blocky/app/helm-release.yaml
+++ b/clusters/main/kubernetes/core/blocky/app/helm-release.yaml
@@ -52,6 +52,10 @@ spec:
         dnsChallenge:
           enabled: false
           domain: dns01.clouddns.com
+      - domain: "${DOMAIN_4}"
+        dnsChallenge:
+          enabled: false
+          domain: dns01.clouddns.com
 
       forward:
         enabled: false
