--- a/clusters/main/kubernetes/apps/joplin/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/joplin/app/helm-release.yaml
@@ -109,11 +109,11 @@ spec:
                   secretKeyRef:
                     name: cnpg-main-urls
                     key: host
-                MAILER_ENABLED: 0
-                MAILER_HOST: ""
-                MAILER_PORT: 465
-                MAILER_SECURITY: tls
-                MAILER_AUTH_USER: ""
-                MAILER_AUTH_PASSWORD: ""
-                MAILER_NOREPLY_NAME: ""
-                MAILER_NOREPLY_EMAIL: ""       
+                MAILER_ENABLED: 1
+                MAILER_HOST: smtp.gmail.com
+                MAILER_PORT: 587
+                MAILER_SECURITY: starttls
+                MAILER_AUTH_USER: ${DOMAIN_7_EMAIL}
+                MAILER_AUTH_PASSWORD: ${VAULT_SMTP_PWD}
+                MAILER_NOREPLY_NAME: MooneyDude
+                MAILER_NOREPLY_EMAIL: ${VAULT_SMTP_PWD}      
