--- a/clusters/main/kubernetes/apps/kustomization.yaml
+++ b/clusters/main/kubernetes/apps/kustomization.yaml
@@ -16,5 +16,5 @@ resources:
   - rustdesk/ks.yaml
   # - rdgen/ks.yaml
   - docuseal/ks.yaml
-  - joplin/ks.yaml
-  # - authentik/ks.yaml
+  - joplin/ks.yaml  
+  - authentik/ks.yaml
