--- a/clusters/main/kubernetes/apps/immich/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/immich/app/helm-release.yaml
@@ -56,6 +56,12 @@ spec:
           certManager:
             enabled: true
             certificateIssuer: domain-0-le-prod
+          nginx:
+            enabled: true
+            auth:
+              type: "authentik"
+              internalHost: "authentik-http.authentik.svc.cluster.local:10230"
+              externalHost: "pics.${DOMAIN_1}"              
     persistence:
       profile:
         storageClass: ceph-filesystem
