--- a/clusters/main/kubernetes/apps/kustomization.yaml
+++ b/clusters/main/kubernetes/apps/kustomization.yaml
@@ -15,6 +15,6 @@ resources:
   - stun-turn/ks.yaml
   - rustdesk/ks.yaml
   # - rdgen/ks.yaml
-  - docuseal/ks.yaml
+  # - docuseal/ks.yaml
   - joplin/ks.yaml  
   - authentik/ks.yaml
