--- a/clusters/main/kubernetes/apps/authentik/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/authentik/app/helm-release.yaml
@@ -146,11 +146,7 @@ spec:
           nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"        
         hosts:
           - host: auth.${DOMAIN_1}
-          - host: "sign.${DOMAIN_1}"
-            paths:
-              - path: /outpost.goauthentik.io
-                pathType: ImplementationSpecific
-          # - host: "joplin.${DOMAIN_1}"
+          # - host: "sign.${DOMAIN_1}"
           #   paths:
           #     - path: /outpost.goauthentik.io
           #       pathType: ImplementationSpecific
