--- a/clusters/main/kubernetes/apps/authentik/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/authentik/app/helm-release.yaml
@@ -141,15 +141,15 @@ spec:
     ingress:
       main:
         enabled: true
-        ingressClassName: internal
+        ingressClassName: external
         annotations:
           nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"        
         hosts:
           - host: auth.${DOMAIN_1}
-          # - host: "sign.${DOMAIN_1}"
-          #   paths:
-          #     - path: /outpost.goauthentik.io
-          #       pathType: ImplementationSpecific
+          - host: "sign.${DOMAIN_1}"
+            paths:
+              - path: /outpost.goauthentik.io
+                pathType: ImplementationSpecific
         integrations:
           certManager:
             enabled: true
